--- a/main.html
+++ b/main.html
@@ -48,7 +48,9 @@
 				<table border="1" width="100%">
 					<tr><th colspan="2">Nested Table 3</th></tr>
 					<tr>
-						<td><u>Nested Table</u></td>
+						<td>
+							<a href="#">Nested Table </a>
+						</td>
 						<td>Demo Continued</td>
 					</tr>
 				</table>
