--- a/main.html
+++ b/main.html
@@ -58,7 +58,7 @@
 					  <tr><th>Nested Table 4</th></tr>
 					  <tr>
 						  <td style="background-color:black; color:white;">
-							  <center>HTML</center>
+							  HTML
 						  </td>
 						  </tr>
 					 </table>
