--- a/main.html
+++ b/main.html
@@ -46,9 +46,9 @@
 					  <tr><th colspan="2">Nested Table 3</th></tr>
 					  <tr>
 						  <td>
-							  <a href="#">Nested Table</a>
+							  <a href="#"><center>Nested Table</center></a>
 						  </td>
-						  <td>Demo Continued</td>
+						  <td><center>Demo continued</center></td>
 					  </tr>
 				  </table>
 			  </td>
@@ -58,7 +58,7 @@
 					  <tr><th>Nested Table 4</th></tr>
 					  <tr>
 						  <td style="background-color:black; color:white;">
-							  HTML
+							 <center>HTML</center> 
 						  </td>
 						  </tr>
 					 </table>
