--- a/main.html
+++ b/main.html
@@ -48,7 +48,7 @@
 						  <td>
 							  <a href="#"><center>Nested Table</center></a>
 						  </td>
-						  <td><center>Demo continued</center></td>
+						  <td>Demo continued</td>
 					  </tr>
 				  </table>
 			  </td>
@@ -58,7 +58,7 @@
 					  <tr><th>Nested Table 4</th></tr>
 					  <tr>
 						  <td style="background-color:black; color:white;">
-							 <center>HTML</center> 
+							 HTML
 						  </td>
 						  </tr>
 					 </table>
